--- a/styles/sass/partials/_preset-manager.scss
+++ b/styles/sass/partials/_preset-manager.scss
@@ -609,3 +609,6 @@ div.preset-manager-panel .border_selectElement {
 	margin-left: 80px;
 	margin-top: 10px;
 }
+div.preset-manager-panel .move-wrapper-top {
+	margin-top: -15px !important;
+}
